# yeahyeah_ad_plugin

./: .gitignore  CONTRIBUTING.rst  HISTORY.md  Makefile  README.md  README.rst  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
tests/: __init__.py  conftest.py  test_core.py  test_translator.py
yeahyeah_ad_plugin/: __init__.py  cli.py  context.py  core.py  decorators.py  exceptions.py  persistence.py  translator.py
